Added nuspec files for NHibernate.Spatial and NHibernate.PostGis

--- a/NHibernate.Spatial.PostGis/NHibernate.Spatial.PostGis.csproj
+++ b/NHibernate.Spatial.PostGis/NHibernate.Spatial.PostGis.csproj
@@ -98,6 +98,7 @@
     <EmbeddedResource Include="Metadata\SpatialReferenceSystem.PostGisDialect.hbm.xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NHibernate.Spatial.PostGis.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
