--- a/NHibernate.Spatial/NHibernate.Spatial.csproj
+++ b/NHibernate.Spatial/NHibernate.Spatial.csproj
@@ -121,6 +121,7 @@
     <Service Include="{B4F97281-0DBD-4835-9ED8-7DFB966E87FF}" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="NHibernate.Spatial.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
